--- a/app/src/main/res/layout/activity_bottom_menu.xml
+++ b/app/src/main/res/layout/activity_bottom_menu.xml
@@ -11,14 +11,15 @@
         tools:context=".BottomMenu">
 
     <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
+            android:background="#009688"
+            android:minHeight="?attr/actionBarSize"
             android:theme="@style/ToolbarTheme"
-            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar2"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="4dp" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/nav_view"
             android:layout_width="0dp"
@@ -31,31 +32,44 @@
     >
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
+
     <com.google.android.gms.ads.AdView
             android:id="@+id/adView"
-            ads:adSize="BANNER"
             android:layout_width="404dp"
             android:layout_height="62dp"
-            android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginBottom="1dp"
+            ads:adSize="BANNER"
             ads:adUnitId="ca-app-pub-7625476876021461/6286787151"
-            android:layout_marginTop="7dp"
-            app:layout_constraintTop_toBottomOf="@+id/fragmentHolder" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="7dp" android:layout_marginBottom="1dp"
-            app:layout_constraintBottom_toTopOf="@+id/nav_view">
-    </com.google.android.gms.ads.AdView>
+            app:layout_constraintBottom_toTopOf="@+id/nav_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragmentHolder"></com.google.android.gms.ads.AdView>
+
     <LinearLayout
             android:id="@+id/fragmentHolder"
-            android:orientation="vertical"
-            android:layout_width="399dp"
+            android:layout_width="400dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="12dp"
+            android:background="@color/colorFormMasterElementBackground"
             android:clipChildren="false"
             android:clipToPadding="false"
-            android:layout_height="0dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="70dp"
-            app:layout_constraintBottom_toTopOf="@+id/nav_view" app:layout_constraintTop_toTopOf="parent"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/adView"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:background="@color/colorFormMasterElementBackground">
-    </LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/toolbar2"></LinearLayout>
+
+    <ImageButton
+            android:id="@+id/logoutButton"
+            android:layout_width="64dp"
+            android:layout_height="52dp"
+            ads:srcCompat="@android:drawable/ic_lock_power_off"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
