--- a/app/src/main/res/layout/activity_confirm_sign_up.xml
+++ b/app/src/main/res/layout/activity_confirm_sign_up.xml
@@ -7,20 +7,57 @@
         android:layout_height="match_parent"
         tools:context=".ConfirmSignUp">
 
-    <TextView
-            android:text="TextView"
-            android:layout_width="175dp"
-            android:layout_height="24dp"
-            android:id="@+id/confirmCode" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
+            android:id="@+id/confirmButton"
+            android:layout_width="88dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="161dp"
+            android:layout_marginTop="9dp"
+            android:layout_marginEnd="162dp"
             android:text="Confirm"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/confirmCode" />
+
+    <TextView
+            android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/confirmButton"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/confirmCode"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            android:layout_marginStart="118dp"
+            android:layout_marginTop="174dp"
+            android:layout_marginEnd="85dp"
+            android:layout_marginBottom="7dp"
+            android:text="Confirmation"
+            android:textSize="36sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView15"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.52" />
+
+    <TextView
+            android:id="@+id/textView15"
+            android:layout_width="275dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="83dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginEnd="53dp"
+            android:layout_marginBottom="21dp"
+            android:text="A confirmation code was sent to your email."
+            app:layout_constraintBottom_toTopOf="@+id/confirmCode"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView14" />
+
+    <EditText
+            android:id="@+id/confirmCode"
+            android:layout_width="213dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="21dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/confirmButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView15" />
 </androidx.constraintlayout.widget.ConstraintLayout>
