--- a/app/src/main/res/layout/fragment_document.xml
+++ b/app/src/main/res/layout/fragment_document.xml
@@ -9,30 +9,32 @@
 
 
     <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:orientation="vertical"
-            android:layout_width="193dp"
-            android:layout_height="152dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">
-        <Button
-                android:text="@string/apply_clearance"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/clearanceButton"
-        />
-        <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/permitButton" android:text="Apply Business Clearance"
-        />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
         <Button
-                android:text="@string/title_activity_check_status"
+                android:id="@+id/clearanceButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@string/apply_clearance" />
+
+        <Button
+                android:id="@+id/permitButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Apply Business Clearance" />
+
+        <Button
                 android:id="@+id/statusButton"
-        />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/title_activity_check_status" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
