--- a/app/src/main/res/layout/fragment_myquotelist_list.xml
+++ b/app/src/main/res/layout/fragment_myquotelist_list.xml
@@ -60,29 +60,16 @@
             android:id="@+id/list"
             android:layout_width="408dp"
             android:layout_height="560dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="45dp"
+            android:layout_marginEnd="1dp"
             app:layoutManager="LinearLayoutManager"
-            tools:context=".view.MyQuoteListFragment"
-            tools:listitem="@layout/fragment_myquotelist"
-            android:layout_marginTop="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView45" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="1dp" android:layout_marginRight="1dp"/>
-
-    <TextView
-            android:id="@+id/textView45"
-            android:layout_width="382dp"
-            android:layout_height="56dp"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="21dp"
-            android:fontFamily="sans-serif-thin"
-            android:text="Current Events"
-            android:textSize="36sp"
-            app:layout_constraintBottom_toTopOf="@+id/list"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:context=".view.MyQuoteListFragment"
+            tools:listitem="@layout/fragment_myquotelist" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
